# mulang

./: .gitignore  .travis.yml  .wercker.yml  AUTHORS  AUTHORS.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  COPYRIGHT.txt  Gemfile  LICENSE  README.md  build.sh  debug  devinit  escualo_before_deploy.sh  escualo_rsa.enc  ghcjs-swap.sh  gobstones-parser.js  index.html  mkdocs.yml  mulang.cabal  mulang.cabal.ghcjs  mulang_pp  release.sh  run-tests  sitemap.xml  stack.yaml  stack.yaml.ghcjs  tag.sh  test.sh  tokens.yml
.github/: FUNDING.yml
.github/workflows/: test_and_deploy.yml
app/: Main.hs  Version.hs
astspec/: index.html
clispec/: index.html
css/: base.css  bootstrap-custom.css  cinder.min.css  docstyles.css  jquery.json-viewer.css  mumuki-styles.css  try.css
docs/: astspec.md  build.md  clispec.md  devinit  devstart  edlspec.md  index.md  inspections.md  try.md  userguide.md
docs/js/: edlhighligh.js  trymulang.js
edl/: README.md
edl/highlighters/: README.md  codemirror-grammar.json  codemirror-mode.js
edlspec/: index.html
explang/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
explang/spec/: ExplangSpec.hs
explang/src/Language/: Explang.hs
explang/src/Language/Explang/: Expectation.hs  Lexer.x  Parser.y
gem/: .gitignore  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  mulang.gemspec
gem/lib/: mulang.rb
gem/lib/locales/: en.yml  es.yml  operators.yml  pt.yml
gem/lib/mulang/: code.rb  expectation.rb  inspection.rb  language.rb  sexp.rb  tokens.rb  version.rb
gem/lib/mulang/expectation/: custom.rb  i18n.rb  standard.rb
gem/lib/mulang/inspection/: expectation.rb  i18n.rb  matcher.rb  target.rb
gem/spec/: format_spec.rb  i18n_spec.rb  inspection_spec.rb  mulang_spec.rb  spec_helper.rb
generators/: run  tokens.rb
ghcjslib/: .gitignore  Dockerfile  README.md  build.sh  deploy.sh  index.html  index.js  package-lock.json  package.json  release.sh  swap.sh  test.sh
ghcjslib/gem/: .gitignore  CODE_OF_CONDUCT.md  Gemfile  Rakefile  mulangjs.gemspec
ghcjslib/gem/lib/: mulangjs.rb
ghcjslib/gem/lib/mulangjs/: version.rb
ghcjslib/gem/spec/: gobstones_test_runner_spec.rb  spec_helper.rb
ghcjslib/src/: binding.js  code.js  exports.js  footer.js.part  header.js.part  i18n.js  main.js  operators-i18n.js
ghcjslib/test/: i18n-spec.js  test.js
inspections/: index.html
js/: edlhighligh.js  highlight.pack.js  jquery.json-viewer.js  mumuki-styles.js  trymulang.js
search/: search_index.json
spec/: AnalysisJsonSpec.hs  AnalyzerSpec.hs  AstsGenerationSpec.hs  AutocorrectorSpec.hs  BuilderSpec.hs  CSpec.hs  CliSpec.hs  CodeDuplicationInspectorSpec.hs  CombinerSpec.hs  CompilerSpec.hs  ConvertGobstonesAstToMulangAstSpec.hs  CountSpec.hs  CounterSpec.hs  CssSpec.hs  CustomExpectationsAnalyzerSpec.hs  DomainLanguageSpec.hs  DuplicationInspectorSpec.hs  DuplicationSpec.hs  DuplicationsInspectorSpec.hs  EdlSpec.hs  EvaluatorSpec.hs  ExpectationsAnalyzerSpec.hs  ExpectationsCompilerSpec.hs  ExpectationsCorrectorSpec.hs  ExplangAnalyzerSpec.hs  ExplorerSpec.hs  ExpressivenessSpec.hs  FragmentParserSpec.hs  FunctionalInspectorSpec.hs  FunctionalSpec.hs  GeneratorSpec.hs  GenericSpec.hs  GobstonesInspectorSpec.hs  GobstonesSmellSpec.hs  GobstonesSpec.hs  HaskellSpec.hs  HtmlSpec.hs  IdentifierSpec.hs  InspectorSpec.hs  InterpreterSpec.hs  (+39 more)
src/: Main.hs  Prolog.hs
src/Control/: Fallible.hs
src/Data/: Condition.hs  Count.hs
src/Data/Function/: Extra.hs
src/Data/List/: Extra.hs
src/Interpreter/: Mulang.hs  Runner.hs
src/Interpreter/Mulang/: Tests.hs
src/Language/: Mulang.hs
src/Language/Mulang/: All.hs  Analyzer.hs  Ast.hs  Binding.hs  Builder.hs  Consult.hs  Counter.hs  DomainLanguage.hs  DuplicateCode.hs  Edl.hs  Explorer.hs  Generator.hs  Identifier.hs  Inspector.hs  Interpreter.hs  JSCompiler.hs  Operators.hs  Parsers.hs  Renamer.hs  Serializer.hs  Signature.hs  Synthesizer.hs  Unbuilder.hs  Unfold.hs  Unparsers.hs
src/Language/Mulang/Analyzer/: Analysis.hs  Autocorrector.hs  Code.hs  CodeSampleParser.hs  Compiler.hs  CustomExpectationsAnalyzer.hs  DomainLanguageAnalyzer.hs  DomainLanguageCompiler.hs  EdlQueryCompiler.hs  ExpectationsAnalyzer.hs  ExpectationsCompiler.hs  ExpectationsEvaluator.hs  ExplangAnalyzer.hs  ExplangExpectationsCompiler.hs  Finding.hs  FragmentParser.hs  Interpreter.hs  SampleParser.hs  SampleParser.hs.ghcjs  SignatureStyleCompiler.hs  SignaturesAnalyzer.hs  SmellsAnalyzer.hs  Synthesizer.hs  TestsAnalyzer.hs  Transformer.hs
src/Language/Mulang/Analyzer/Analysis/: Json.hs
src/Language/Mulang/Ast/: Expression.hs  HighLevel.hs  Modifier.hs  Operator.hs  Visitor.hs
src/Language/Mulang/Autocorrector/: Haskell.hs  Java.hs  Python.hs  Ruby.hs
src/Language/Mulang/Cli/: Code.hs  Compiler.hs  Interpreter.hs  Main.hs
src/Language/Mulang/Edl/: Expectation.hs  Lexer.x  Parser.y
src/Language/Mulang/Inspector/: Bound.hs  CodeDuplication.hs  Combiner.hs  Contextualized.hs  Expressiveness.hs  Extras.hs  Family.hs  Functional.hs  Generalized.hs  Generic.hs  Literal.hs  Logic.hs  Matcher.hs  Multi.hs  ObjectOriented.hs  Plain.hs  Primitive.hs  Procedural.hs  Query.hs  Smell.hs  Typed.hs
src/Language/Mulang/Interpreter/: Internals.hs  Repl.hs  Runner.hs  Tests.hs
src/Language/Mulang/Normalizers/: C.hs  Haskell.hs  Java.hs  JavaScript.hs  Python.hs  Ruby.hs
src/Language/Mulang/Operators/: C.hs  Haskell.hs  Java.hs  JavaScript.hs  Python.hs  Ruby.hs
src/Language/Mulang/Parsers/: C.hs  Css.hs  Gobstones.hs  Haskell.hs  Html.hs  Java.hs  JavaScript.hs  Json.hs  Prolog.hs  Python.hs
src/Language/Mulang/Transform/: Aliaser.hs  Cropper.hs  Normalizer.hs  Renamer.hs  Replacer.hs
src/Language/Mulang/Unparsers/: Java.hs  Python.hs  Ruby.hs
src/Text/: Dictionary.hs  Reparser.hs  SimpleParser.hs
src/Text/Inflections/: Tokenizer.hs
themes/cinder/: 404.html  base.html  content.html  main.html  nav-sub.html  nav.html  toc.html
themes/cinder/css/: base.min.css  bootstrap-custom.min.css  highlight.css  highlight.min.css
try/: index.html
userguide/: index.html
(+7 files in other folders)
