name:                mulang
version:             1.0.0
synopsis:            The Mu Language, a non-computable extended Lambda Calculus
-- description:
license:             GPL
license-file:        LICENSE.txt
author:              Franco Leonardo Bulgarelli
maintainer:          franco@mumuki.org
category:            Language
build-type:          Simple
cabal-version:       >=1.10


executable mulang
  hs-source-dirs:
    src
  main-is: Main.hs
  default-language:    Haskell2010

  build-depends:
    base                      ,
    bytestring                ,
    text                      ,
    unordered-containers      ,
    containers                ,
    scientific                ,
    vector                    ,
    haskell-src               ,
    language-javascript       ,
    aeson                     ,
    parsec                    ,
    ParsecTools               ,
    split                     ,
    hashable                  ,
    process
  build-tools:
    happy,
    alex

  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -fno-warn-name-shadowing
    -fno-warn-incomplete-patterns
    -fwarn-tabs
    -funbox-strict-fields
    -threaded
    -O

library
  build-depends:       base >=4.6
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -fno-warn-name-shadowing
    -fno-warn-incomplete-patterns
    -fwarn-tabs
    -funbox-strict-fields
    -threaded
    -O

  hs-source-dirs:
      src
  exposed-modules:
    Control.Fallible
    Text.SimpleParser
    Text.Inflections.Tokenizer
    Language.Mulang
    Language.Mulang.Ast
    Language.Mulang.Binding
    Language.Mulang.Builder
    Language.Mulang.Explorer
    Language.Mulang.Signature
    Language.Mulang.Inspector
    Language.Mulang.Inspector.Generic
    Language.Mulang.Inspector.ObjectOriented
    Language.Mulang.Inspector.Functional
    Language.Mulang.Inspector.Logic
    Language.Mulang.Inspector.Procedural
    Language.Mulang.Inspector.Combiner
    Language.Mulang.Inspector.Generic.Duplication
    Language.Mulang.Inspector.Generic.Smell
    Language.Mulang.Inspector.Generic.Expressiveness
    Language.Mulang.Parsers
    Language.Mulang.Parsers.Haskell
    Language.Mulang.Parsers.Gobstones
    Language.Mulang.Parsers.Prolog
    Language.Mulang.Parsers.JavaScript
    Language.Mulang.Analyzer
    Language.Mulang.Analyzer.Analysis
    Language.Mulang.Analyzer.Analysis.Json
    Language.Mulang.Analyzer.SampleParser
    Language.Mulang.Analyzer.ExpectationsAnalyzer
    Language.Mulang.Analyzer.ExpectationsCompiler
    Language.Mulang.Analyzer.SignaturesAnalyzer
    Language.Mulang.Analyzer.SignatureStyleCompiler
    Language.Mulang.Analyzer.SmellsAnalyzer
  build-depends:
    base                      ,
    bytestring                ,
    text                      ,
    unordered-containers      ,
    containers                ,
    scientific                ,
    vector                    ,
    haskell-src               ,
    language-javascript       ,
    aeson                     ,
    inflections               ,
    parsec                    ,
    ParsecTools               ,
    split                     ,
    hashable                  ,
    process
  build-tools:
    happy,
    alex

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -fno-warn-name-shadowing
    -fno-warn-incomplete-patterns
    -fwarn-tabs
    -funbox-strict-fields
    -threaded
    -O
  hs-source-dirs:
      spec
  main-is:
      Spec.hs
  build-depends:
    base                      ,
    unordered-containers      ,
    containers                ,
    scientific                ,
    vector                    ,
    bytestring                ,
    text                      ,
    aeson                     ,
    haskell-src               ,
    language-javascript       ,
    inflections               ,
    parsec                    ,
    ParsecTools               ,
    hspec                     ,
    process                   ,
    neat-interpolation        ,
    mulang
  build-tools:
    happy,
    alex
